# jupino

./: LICENSE  README.md  pyproject.toml
examples/: 01 Simple.ipynb  Multiple Inputs.ipynb  Pair of inputs.ipynb  Showcase.ipynb
jupino/: __init__.py  anno_session.py  interface.py  widgets.py
jupino/widgets/: __init__.py  defaults.py  labels.py  utils.py  x.py
