[tool.poetry]
name = "jupino"
version = "0.1.0"
description = "Annotate data using Jupyter notebook"
authors = ["Sanjaya Subedi <jangedoo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
rope = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
